@startuml
'https://plantuml.com/class-diagram


class Company {
- designation
- address
}

class Test {
- testID
- nhscode
}

class TestType {
- testType
- designation
}

class Category {
- name
- code
}

class Parameter{
- code
- shortName
- designation

}

class Diagnosis {
- report
}

class SpecialistDoctor {
- doctorIndexNumber
}

Company "1" --> "*" Test : performs
Test "1" --> "1" Diagnosis : has
Diagnosis "*" --> "1" SpecialistDoctor : is made by
TestType "1" --> "1" Test : is of
TestType "1" --> "*" Category : has
Category "1" --> "*" Parameter : has


@enduml